--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -69,12 +69,6 @@ jobs:
     - name: Clone source code
       run: |
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
-        if [ -f "devices/common/feeds.conf" ]; then
-          mv devices/common/feeds.conf openwrt/
-        fi
-        if [ -f "devices/${{matrix.target}}/feeds.conf" ]; then
-          mv devices/${{matrix.target}}/feeds.conf openwrt/
-        fi
 
     - name: Free up disk space
       if: env.FREE_UP_DISK == 'true'
@@ -85,7 +79,10 @@ jobs:
         ln -sf /mnt/openwrt/dl openwrt/dl
         ln -sf /mnt/openwrt/staging_dir openwrt/staging_dir
 
-
+    - name: Load custom configuration
+      run: |
+        make defconfig
+        
     - name: Download package
       id: package
       run: |
