--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -81,6 +81,7 @@ jobs:
 
     - name: Load custom configuration
       run: |
+        cd openwrt
         make defconfig
         
     - name: Download package
